[package]
name = "ptx_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
libloading = "0.8"
static_assertions = "1.1.0"
num = "0.4"
rand = "0.8.4"
rand_xorshift = "0.3.0"
argh = "0.1.12"
bpaf = { version = "0.9.14", features = ["derive"] }
regex = "1.11.0"
half = { version = "2.4.1", features = ["num-traits"] }
float8 = { version = "0.4.2", features = ["num-traits"] }

[target.'cfg(not(windows))'.dependencies.rug]
default-features = false
features = ["float"]
version = "1.26.1"

[profile.release]
codegen-units = 1
lto = "fat"
